subiendo imagenes del slider

--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
                 <li>
                     <img src="img/slider_1.webp" alt="">
                     <section class="caption">
-                        <h1>EL APRENDIZAJE EN LÍNEA ES LA PUERTA A UN MUNDO DE CONOCIMIENTO</h1>
-                        <p>¡ÁBRELA CON NUESTROS CURSOS!</p>
+                        <h1>APRENDER A PROGRAMAR NUNCA <br>HA SIDO TAN ACCESIBLE</h1>
+                        <p>Aprender a programar nunca ha sido tan accesible</p>
                     </section>
                 </li>
                 <li>
-                    <img src="img/slider_1.webp" alt="">
+                    <img src="img/slider_2.webp" alt="">
                     <section class="caption">
-                        <h1>PROGRAMAR ES EL LENGUAJE DEL FUTURO</h1>
-                        <p>PREPÁRATE CON NUESTROS CURSOS EN LÍNEA</p>
+                        <h1>PROGRAMAR ES EL <br> LENGUAJE DEL FUTURO</h1>
+                        <p>ÚNETE A NUESTRA COMUNIDAD DE ESTUDIANTES</p>
                     </section>
                 </li>
                 <li>
-                    <img src="img/slider_1.webp" alt="">
+                    <img src="img/slider_3.webp" alt="">
                     <section class="caption">
-                        <h1>IMPULSA TU CARRERA CON NUESTRAS LECCIONES EN LÍNEA</h1>
+                        <h1>IMPULSA TU CARRERA CON <br> NUESTRAS LECCIONES EN LÍNEA</h1>
                         <p>APRENDE, PRÁCTICA Y LOGRA TUS METAS</p>
                     </section>
                 </li>
